# J3ngine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  note.c  old_Makefile
Models/: BoomBox.mtl
doc/: Doxyfile
doc/html/: _a_window_8h.js  _a_window_8h__dep__incl.map  _a_window_8h__dep__incl.md5  _a_window_8h__incl.map  _a_window_8h_source.html  _camera_8cpp.html  _camera_8cpp__incl.map  _camera_8h.html  _camera_8h__dep__incl.map  _camera_8h__incl.md5  _cube_map_8h.html  _cube_map_8h__incl.map  _cube_map_8h_source.html  _file_8cpp__incl.md5  _file_8h__dep__incl.map  _file_8h__dep__incl.md5  _j_key_codes_8h.js  _j_key_codes_8h__dep__incl.map  _j_key_codes_8h__dep__incl.md5  _j_key_codes_8h__incl.md5  _j_key_codes_8h_source.html  _model_8cpp__incl.map  _model_8cpp__incl.md5  _model_8h.html  _model_8h__incl.md5  _model_loader_8cpp.html  _model_loader_8h.html  _model_loader_8h__dep__incl.map  _model_loader_8h__incl.map  _model_loader_8h__incl.md5  _node_8cpp__incl.map  _node_8h.html  _node_8h__incl.md5  _node_8h_source.html  _o_b_j_loader_8cpp.html  _o_b_j_loader_8cpp__incl.map  _o_b_j_loader_8cpp__incl.md5  _scene_8cpp__incl.md5  _scene_8h.html  _scene_8h__incl.map  (+86 more)
docs/: J3Engine.uxf  Project.txt
docs/html/: _a_window_8h.html  _a_window_8h__incl.md5  _camera_8cpp__incl.md5  _camera_8h__dep__incl.md5  _camera_8h__incl.map  _camera_8h_source.html  _cube_map_8cpp.html  _cube_map_8cpp.js  _cube_map_8cpp__incl.map  _cube_map_8cpp__incl.md5  _cube_map_8h__dep__incl.map  _cube_map_8h__dep__incl.md5  _cube_map_8h__incl.md5  _file_8cpp.html  _file_8cpp__incl.map  _file_8h.html  _file_8h_source.html  _j_key_codes_8h.html  _j_key_codes_8h__incl.map  _model_8cpp.html  _model_8h.js  _model_8h__dep__incl.map  _model_8h__dep__incl.md5  _model_8h__incl.map  _model_8h_source.html  _model_loader_8cpp__incl.map  _model_loader_8cpp__incl.md5  _model_loader_8h__dep__incl.md5  _model_loader_8h_source.html  _node_8cpp.html  _node_8cpp__incl.md5  _node_8h__dep__incl.map  _node_8h__dep__incl.md5  _node_8h__incl.map  _r_e_a_d_m_e_8md.html  _scene_8cpp.html  _scene_8cpp__incl.map  _scene_8h__dep__incl.map  _scene_8h__dep__incl.md5  _shader_8h.html  (+85 more)
lib/: Galogen46.c  Galogen46.h  JUtils.c  JUtils.h  tiny_obj_loader.h
models/: Barrel.mtl  Benchmark.mtl  BoomBox.mtl  Companion-Cube.mtl  Dark_Astronaut.mtl  RustedSphere.mtl  Test.mtl
src/: Info.h.in  Utils.cpp  Utils.h  testmain.cpp
src/AWindow/: AWindow.h  File.cpp  File.h  HID.h  InputManager.cpp  InputManager.h  (+5 more)
(+157 files in other folders)
